# f3-rs-sandbox

./: Cargo.toml  Makefile  memory.x
src/: main.rs  print.rs
