[package]
name = "f3-rs-sandbox"
version = "0.1.0"
authors = ["Piroro-hs <Piroro-hs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.6.4", features = ["inline-asm"] }
cortex-m-rt = { version = "0.6.13", features = ["device"] }
panic-halt = "0.2.0"
stm32f3xx-hal = { git = "https://github.com/Piroro-hs/stm32f3xx-hal", rev = "cb86bf5", features = ["rt", "stm32f303x8"] }
